--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,17 +8,59 @@
 </head>
 <body>
     <header>
-        <!-- <section>
-            <h1>Il mio viaggio a Londra</h1>
-        </section> -->
         <section>
-            <img src="/img/pexels-bill-emrich-230794-0.jpg" alt="" height="400" width="300">
-            <img src="/img/pexels-bill-emrich-230794-1.jpg" alt="" height="400" width="300">
-            <img src="/img/pexels-bill-emrich-230794-2.jpg" alt="" height="400" width="300">
+            <h1>Il mio viaggio a Londra</h1>
         </section>
-
-
+        <section>
+            <img src="img/pexels-bill-emrich-230794-0.jpg" alt="" height="400" width="300">
+            <img src="img/pexels-bill-emrich-230794-1.jpg" alt="" height="400" width="300">
+            <img src="img/pexels-bill-emrich-230794-2.jpg" alt="" height="400" width="300">
+        </section>
     </header>
-    
+    <section>
+        <hr>
+        <h1>
+            Le mie spese
+        </h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>Numero </th>
+                    <th>Descrizione </th>
+                    <th>Costo </th>
+                </tr>
+            </thead>
+            <tbody>
+                <td>1</td>
+                <td>Biglietto aereo</td>
+                <td>120€</td>
+            </tbody>
+            <tbody>
+                <td>1</td>
+                <td>Biglietto aereo</td>
+                <td>120€</td>
+            </tbody>
+            <tbody>
+                <td>1</td>
+                <td>Biglietto aereo</td>
+                <td>120€</td>
+            <tbody>
+                <td colspan="2">1</td>
+                <td>360€</td>
+            </tbody>
+        </table>
+    </section>
+    <hr>
+    <section>
+        <h1>
+            Cose da fare
+        </h1>
+        <ul>
+            <li>Visitare la tower of London</li>
+            <li>Visitare Greenwich</li>
+            <li>Ascoltare un'artista di strada a Covent Garden</li>
+            <li>Mangiare il tipico Fish and Chips inglese</li>
+        </ul>
+    </section>
 </body>
-</html>
+</html>    
