--- a/index.html
+++ b/index.html
@@ -56,11 +56,49 @@
             Cose da fare
         </h1>
         <ul>
-            <li>Visitare la tower of London</li>
-            <li>Visitare Greenwich</li>
-            <li>Ascoltare un'artista di strada a Covent Garden</li>
-            <li>Mangiare il tipico Fish and Chips inglese</li>
+            <li>Visitare la tower of London&#10007;</li>
+            <li>Visitare Greenwich&#10004;</li>
+            <li>Ascoltare un'artista di strada a Covent Garden &#10004;</li>
+            <li>Mangiare il tipico Fish and Chips inglese&#10007;</li>
         </ul>
     </section>
+    <hr>
+    <section>
+        <h1>
+            Info utili:
+        </h1>
+        <ol>
+            <li>
+                Numeri utili d'emergenza
+                <ul>
+                    <li><b>999</b>-Emergenza</li>
+                    <li><b>111</b>-Numero polizia</li>
+                    <li><b>101</b>-Numero assistenza medica</li>
+                </ul>
+            </li>
+            <li>
+                Hotel
+                <ul>
+                    <li><b>Nome Hotel:</b>Buckingam Palace</li>
+                    <li><b>Indirizzo Hotel:</b>Westminster,London SW1A 1AA,Regno Unito</li>
+                </ul>
+            </li>
+            <li>
+                Aereo
+                <ul>
+                    <li><b>Volo di Andata:</b>Y1234X, ore 9.30 da Milano Malpensa</li>
+                    <li><b>Volo di Ritorno:</b>Y1236X, ore 18.30 da London Heathrow</li>
+                </ul>
+            </li>
+        </ol>
+    </section>
+    <hr>
+    <footer>
+        <h1>
+            Le foto
+        </h1>
+        <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="">
+        <img src="https://i.insider.com/58663ad6dd0895427f8b4a76?width=1200" alt="" height="399.99" width="399.99">
+    </footer>
 </body>
 </html>    
