--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <section>
             <h1>Il mio viaggio a Londra</h1>
         </section>
-        <section>
+        <div>
             <img src="img/pexels-bill-emrich-230794-0.jpg" alt="" height="400" width="300">
             <img src="img/pexels-bill-emrich-230794-1.jpg" alt="" height="400" width="300">
             <img src="img/pexels-bill-emrich-230794-2.jpg" alt="" height="400" width="300">
-        </section>
+        </div> 
     </header>
     <main>
         <section>
