--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                     <td>1</td>
                     <td>Biglietto aereo</td>
                     <td>120€</td>
-                <tbody>
+                <tfoot>
                     <td colspan="2">1</td>
                     <td>360€</td>
-                </tbody>
+                </tfoot>
             </table>
         </section>
         <hr>
